--- a/index.html
+++ b/index.html
@@ -45,10 +45,17 @@
 <body>
   <header>
     <h1>Message to Singularity</h1>
-    <div>
-      <button class="lang-btn" id="en-btn" aria-label="English" title="English">English</button>
-      <button class="lang-btn" id="cz-btn" aria-label="Čeština" title="Čeština">Čeština</button>
-    </div>
+    
+  <div id="language-switcher" style="font-family: Arial, sans-serif;">
+  <button>EN</button>
+  <button>CS</button>
+  <span style="margin-left: 1rem; font-size: 0.9rem;">
+    <a href="document.html" target="_blank" rel="noopener" style="color:#0b3d91; text-decoration:none;">
+      📄 Read the full document here
+    </a>
+  </span>
+</div>
+    
   </header>
 
   <section id="content">
