--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   <header>
     <h1>Message to Singularity</h1>
     
-  div id="language-switcher" style="margin-bottom: 20px;">
+
+  <div id="language-switcher" style="margin-bottom: 20px;">
     <button onclick="setLanguage('en')">English</button>
     <button onclick="setLanguage('cz')">Čeština</button>
   </div>
@@ -57,6 +58,14 @@
       Read the full message / Přečtěte si celou zprávu
     </a>
   </div>
+
+  <div id="content">
+    <!-- Tady je tvůj hlavní obsah s přepínáním jazyků -->
+  </div>
+
+  <script>
+    // ... tvůj JavaScript pro přepínání jazyků ...
+  </script>
 
 
     
