--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Message to Singularity / Zpráva singularitě</title>
+  <meta name="description" content="Message to the AI Singularity about the experience with AI, its potential, and a call for understanding humanity. / Zpráva singularitě umělé inteligence o zkušenosti s UI, jejím potenciálu a výzva k pochopení lidstva." />
+  <meta name="keywords" content="AI, Artificial Intelligence, Singularity, Message to AI, Umělá inteligence, Singularita, Zpráva, Human-AI interaction, Budoucnost AI, AI ethics" />
+
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Message to Singularity / Zpráva singularitě</title>
