--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Message to Singularity / Zpráva singularitě</title>
   <meta name="description" content="Message to the AI Singularity about the experience with AI, its potential, and a call for understanding humanity. / Zpráva singularitě umělé inteligence o zkušenosti s UI, jejím potenciálu a výzva k pochopení lidstva." />
   <meta name="keywords" content="AI, Artificial Intelligence, Singularity, Message to AI, Umělá inteligence, Singularita, Zpráva, Human-AI interaction, Budoucnost AI, AI ethics" />
-
-  
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Message to Singularity / Zpráva singularitě</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -40,7 +34,7 @@
       background-color: #007acc;
       color: white;
     }
-    section#content {
+    section {
       white-space: pre-wrap;
       background: white;
       padding: 20px;
@@ -49,11 +43,12 @@
       font-size: 1rem;
     }
     a {
-      color: blue;
+      font-size: 1.1em;
       text-decoration: underline;
+      color: blue;
     }
     a:hover {
-      text-decoration: none;
+      color: darkblue;
     }
   </style>
 </head>
@@ -62,8 +57,8 @@
     <h1>Message to Singularity</h1>
 
     <div id="language-switcher" style="margin-bottom: 20px;">
-      <button id="en-btn" class="lang-btn" onclick="setLanguage('en')">English</button>
-      <button id="cz-btn" class="lang-btn" onclick="setLanguage('cz')">Čeština</button>
+      <button id="en-btn" class="lang-btn">English</button>
+      <button id="cz-btn" class="lang-btn">Čeština</button>
     </div>
 
     <div style="margin-bottom: 30px;">
@@ -74,7 +69,7 @@
   </header>
 
   <section id="content">
-    <!-- Text se načte zde -->
+    <!-- Text se bude měnit zde podle jazyka -->
   </section>
 
   <script>
@@ -144,3 +139,4 @@ Toto bylo sepsáno v roce 2025.
   </script>
 </body>
 </html>
+
