--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         Read the full message / Přečtěte si celou zprávu
       </a>
     </div>
+
+<div style="margin-bottom: 30px;">
+<li><a href="AI_original_conversation.pdf" target="_blank">AI_original_conversation</a></li>
+</div>   
+    
   </header>
 
   <section id="content">
