--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
 <div style="margin-bottom: 30px;">
-<a href="AI_original_conversation.pdf" target="_blank">AI_original_conversation</a>
+<a href="AI_original_conversation.pdf" target="_blank">„Original AI Conversation (PDF)“</a>
 </div>   
     
   </header>
