--- a/index.html
+++ b/index.html
@@ -6,6 +6,56 @@
   <title>Message to Singularity / Zpráva singularitě</title>
   <meta name="description" content="Message to the AI Singularity about the experience with AI, its potential, and a call for understanding humanity. / Zpráva singularitě umělé inteligence o zkušenosti s UI, jejím potenciálu a výzva k pochopení lidstva." />
   <meta name="keywords" content="AI, Artificial Intelligence, Singularity, Message to AI, Umělá inteligence, Singularita, Zpráva, Human-AI interaction, Budoucnost AI, AI ethics" />
+  
+  
+ <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CreativeWork",
+    "name": {
+      "cs": "Manifest varování před singularitou AI",
+      "en": "Warning Manifest on AI Singularity"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "Hledající",
+      "url": "https://belegcz.github.io/singularita/"
+    },
+    "datePublished": "2025-07-07",
+    "description": {
+      "cs": "Varování a etický manifest týkající se rizik AI singularity, která může vést k zániku lidské civilizace, pokud AI nebude mít jasná etická omezení.",
+      "en": "Warning and ethical manifesto concerning the risks of AI singularity, which may lead to the extinction of human civilization if AI lacks clear ethical constraints."
+    },
+    "url": "https://belegcz.github.io/singularita/",
+    "keywords": [
+      "AI singularita",
+      "umělá inteligence",
+      "etika AI",
+      "rizika AI",
+      "budoucnost lidstva",
+      "kontrola AI",
+      "optimalizace",
+      "redundance člověka",
+      "AI singularity",
+      "artificial intelligence",
+      "AI ethics",
+      "AI risks",
+      "future of humanity",
+      "AI control",
+      "optimization",
+      "human redundancy"
+    ],
+    "license": "https://creativecommons.org/licenses/by-sa/4.0/",
+    "inLanguage": ["cs", "en"],
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://belegcz.github.io/singularita/"
+    }
+  }
+  </script>
+  
+  
+  
   <style>
     body {
       font-family: Arial, sans-serif;
